--- a/.gitignore
+++ b/.gitignore
@@ -3132,3 +3132,69 @@ usr/built-in.o
 usr/initramfs_data.o
 vmlinux
 vmlinux.o
+.config.old
+kernel/.stacktrace.o.cmd
+kernel/.tracepoint.o.cmd
+kernel/stacktrace.o
+kernel/trace/.blktrace.o.cmd
+kernel/trace/.built-in.o.cmd
+kernel/trace/.ftrace.o.cmd
+kernel/trace/.libftrace.o.cmd
+kernel/trace/.power-traces.o.cmd
+kernel/trace/.ring_buffer.o.cmd
+kernel/trace/.trace.o.cmd
+kernel/trace/.trace_clock.o.cmd
+kernel/trace/.trace_events.o.cmd
+kernel/trace/.trace_events_filter.o.cmd
+kernel/trace/.trace_export.o.cmd
+kernel/trace/.trace_functions.o.cmd
+kernel/trace/.trace_nop.o.cmd
+kernel/trace/.trace_output.o.cmd
+kernel/trace/.trace_printk.o.cmd
+kernel/trace/.trace_sched_switch.o.cmd
+kernel/trace/.trace_selftest_dynamic.o.cmd
+kernel/trace/.trace_stack.o.cmd
+kernel/trace/.trace_stat.o.cmd
+kernel/trace/blktrace.o
+kernel/trace/built-in.o
+kernel/trace/ftrace.o
+kernel/trace/libftrace.o
+kernel/trace/power-traces.o
+kernel/trace/ring_buffer.o
+kernel/trace/trace.o
+kernel/trace/trace_clock.o
+kernel/trace/trace_events.o
+kernel/trace/trace_events_filter.o
+kernel/trace/trace_export.o
+kernel/trace/trace_functions.o
+kernel/trace/trace_nop.o
+kernel/trace/trace_output.o
+kernel/trace/trace_printk.o
+kernel/trace/trace_sched_switch.o
+kernel/trace/trace_selftest_dynamic.o
+kernel/trace/trace_stack.o
+kernel/trace/trace_stat.o
+kernel/tracepoint.o
+lib/.dynamic_debug.o.cmd
+lib/dynamic_debug.o
+net/core/.net-traces.o.cmd
+net/core/net-traces.o
+scripts/kconfig/.mconf.cmd
+scripts/kconfig/.mconf.o.cmd
+scripts/kconfig/lxdialog/.checklist.o.cmd
+scripts/kconfig/lxdialog/.inputbox.o.cmd
+scripts/kconfig/lxdialog/.menubox.o.cmd
+scripts/kconfig/lxdialog/.textbox.o.cmd
+scripts/kconfig/lxdialog/.util.o.cmd
+scripts/kconfig/lxdialog/.yesno.o.cmd
+scripts/kconfig/lxdialog/checklist.o
+scripts/kconfig/lxdialog/inputbox.o
+scripts/kconfig/lxdialog/menubox.o
+scripts/kconfig/lxdialog/textbox.o
+scripts/kconfig/lxdialog/util.o
+scripts/kconfig/lxdialog/yesno.o
+scripts/kconfig/mconf.o
+sound/soc/codecs/.snd-soc-tlv320aic12k.o.cmd
+sound/soc/codecs/.tlv320aic12k.o.cmd
+sound/soc/codecs/snd-soc-tlv320aic12k.o
+sound/soc/codecs/tlv320aic12k.o
