--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32
-# Wed Dec 24 04:50:34 2014
+# Mon Dec 29 15:49:48 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1362,7 +1362,7 @@ CONFIG_TI_MEDIA=y
 # CONFIG_VIDEO_VPSS_SYSTEM is not set
 # CONFIG_VIDEO_VPFE_CAPTURE is not set
 CONFIG_VIDEO_OMAP2_VOUT=y
-CONFIG_VIDEO_OMAP3=y
+# CONFIG_VIDEO_OMAP3 is not set
 CONFIG_VIDEO_OMAP3_ISP=y
 # CONFIG_VIDEO_OMAP34XX_ISP_PREVIEWER is not set
 CONFIG_VIDEO_OMAP34XX_ISP_RESIZER=y
